# My-Engine-Cpp-OpenGL-termpaper-pgr

./: .gitignore  CMakeLists.txt  README.md
res/: animatedTvScreen.frag  animatedTvScreen.vert  axesCrosshair.frag  axesCrosshair.vert  outlining.frag  shaderGeometry.frag  shaderGeometryMountains.frag  shaderGeometryMountains.vert  shaderLighting.frag  shaderLighting.vert  shadowDepth.frag  shadowDepth.geom  skybox.frag
res/backpack/: backpack.mtl
res/terrain/: Jigsaw.mtl  axe.mtl  big_table.mtl  character.mtl  fire_place.mtl  flashlight.mtl  lamp.mtl  marshmallow_stick.mtl  pickaxe.mtl  showel.mtl  ski_holder.mtl  stump.mtl  table.mtl  tent.mtl  terrain.mtl
res/tv/: tv_screen.mtl
res/ui/: ui.frag  ui.vert
src/: main.cpp
src/animation/: AnimationPoint.cpp  AnimationPoint.h  Animator.cpp  Animator.h
src/class_factory/: ClassFactory.cpp  ClassFactory.h
src/graphics/: AxesCrosshair.cpp  AxesCrosshair.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  TextureCubeArray.cpp  TextureCubeArray.h  gBuffer.cpp  gBuffer.h
src/graphics/hud/: Batch2D.cpp  Batch2D.h  Font.cpp  Font.h  UVRegion.h
src/graphics/lighting/: Fog.cpp  Fog.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h
src/graphics/models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  TVModel.cpp  TVModel.h  TVScreen.cpp  TVScreen.h  Terrain.cpp  Terrain.h
src/hardcode/: tv.cpp  tv.h
src/loaders/: FileSaver.cpp  FileSaver.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
src/renderers/: HudRenderer.cpp  HudRenderer.h  Renderer.cpp  Renderer.h
src/scene/: Scene.cpp  Scene.h
src/window/: Camera.cpp  Camera.h  Events.cpp  Events.h  Window.cpp  Window.h
